Portfolio HTML CSS

--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
-<!-- Header Menu of the Page -->
 <html>
 <head>
     <Title>My First Portfolio</Title>
     <link rel="stylesheet" href="CSS\style.css"/>
 </head>
 
-<body>
-    <section class="Top-header">
-    <div class="Header">
-            <h1> Jacqueline Ongsip</h1>
-            <img src="images\Rainbow.svg" width="24px" height="24px">
-            <nav class="Menu-items">
-        <ul>
-            <p>Home</p>
-            <p>Projects</p>
-            <p><span class="About-Active">About</span></p>
-        </ul>
-        </nav> 
+<section class="navigation">
+<div class="topnav">
+        <a href="#">Jacqueline Ongsip</a>
+        <a href="#"><img src="images\Rainbow.svg"width="24px" height="24px">
+    <div class="topnav-right">
+      <a class="active" href="#">Home</a>
+      <a href="#">Projects</a>
+      <a href="#">About</a>
+    </div>
+  </div>
+</section>
+<body> 
+    <div class="Image-center">
+        <img src="images\Profile Picture 2.jpg"width="200px" height="200px">
+    </div>  
+        <div class="Center-content">
+            <div class="text">
+            <h2>Hi, I am Jackie.
+                A UI/UX designer based in 
+                Melbourne, Australia</h2>
+        </div> 
+    
+</body>
+
+    <section>
+    <div class="footer">
+    <ul class="footernav">
+    <li>Let's Work Together!</li>
+    <li class="email-address">Jongsipaus@Gmail.Com</li>
+   <li> <img src="images\LinkedIn logo.png" width="200px" height="200px"></li>
+    </ul>
     </div>
     </section>
-
-    <section class="content">
-        <img src="images\Profile picture.jpg"width="150px" height="200px">
-        <div class="Center-content">
-            <h1>Nice To Meet You</h1>
-            <p>In short for Jacqueline, You can call me Jackie. 
-                “Jack of all trades master of none, though oftentimes better than master of one.”
-                I could be your UX Unicorn!I love to learn new things, venture out into the world and grow as a person. 
-                In 2023, after 12 years of professional career in nursing, I have decided to take a leap and join a UI/UX design course from Monash University. This course gave me the opportunity to channel my enthusiasm in research and my eagerness to improve processes, to discover and  analyze the explanation behind complications and to enjoy creating products that have meaning.</p>   
-        </div>
-        <div class="Right-content">
-            <p>All my projects were done under the pressure of limited time and use of freshly learned skills alongside working as a Registered nurse in one of Melbourne’s major hospitals.
-                With the abundance of time, I strive to improve my skills and current projects soon in the future.
-                I am looking forward to expand my portfolio with passion projects and most favorably working with you.</p>
-        </div>
-        </section>
-    <footer>
-        <h1>Let's Work Together!</h1>
-        <h1 class="email-address">Jongsipaus@Gmail.Com</h1>
-        <img src="images\LinkedIn logo.png" width="200px" height="200px">
-    </footer>    
-</body>
 </html>
