Basic HTML and CSS

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     </div>
   </div>
 </section>
+
 <body> 
     <div class="Image-center">
-        <img src="images\Profile Picture 2.jpg"width="200px" height="200px">
+        <img src="images\Profile Picture 2.jpg"width="200px" height="200px" id="ProfilePicture2">
     </div>  
         <div class="Center-content">
             <div class="text">
-            <h2>Hi, I am Jackie.
-                A UI/UX designer based in 
-                Melbourne, Australia</h2>
+            <h2>Hi, I am Jackie.</h2>
+            <h2>  A UI/UX designer</h2>
+             <h2>based in </h2>
+             <h2>Melbourne, Australia</h2>
         </div> 
     
 </body>
@@ -34,7 +36,7 @@
     <ul class="footernav">
     <li>Let's Work Together!</li>
     <li class="email-address">Jongsipaus@Gmail.Com</li>
-   <li> <img src="images\LinkedIn logo.png" width="200px" height="200px"></li>
+   <li> <img src="images\LinkedIn logo.png" width="200px" height="200px" class="linkedin"></li>
     </ul>
     </div>
     </section>
