--- a/index.html
+++ b/index.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <Title>My First Portfolio</Title>
-    <link rel="stylesheet" href="CSS\style.css"/>
+    <Title>Jackie's UX Portfolio</Title>
+    <link rel="stylesheet"  href="CSS\style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
 </head>
 
-<section class="navigation">
-<div class="topnav">
-        <a href="#">Jacqueline Ongsip</a>
-        <a href="#"><img src="images\Rainbow.svg"width="24px" height="24px">
-    <div class="topnav-right">
-      <a class="active" href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">About</a>
-    </div>
-  </div>
-</section>
-
 <body> 
-    <div class="Image-center">
-        <img src="images\Profile Picture 2.jpg"width="200px" height="200px" id="ProfilePicture2">
+        <header class="navigation">
+
+<div  class="inline-block-and-logo">
+    <div>      
+    <p class="name">Jacqueline Ongsip</p>
     </div>  
-        <div class="Center-content">
-            <div class="text">
+    <div class="rainbowimage">
+                    <a href="#"><img src="images\Rainbow.svg"width="24px" height="24px"></p>
+    </div>                     
+                    <div>
+                            <nav class="inline-block">
+                                    <ul>
+                    <li class="topnavli"><a class="active" href="#">Home</a></li>
+                    <li class="topnavli"><a href="#">Projects</a></li>
+                    <li class="topnavli"><a href="#">About</a></li>
+        </ul>
+        </nav>
+    </div>
+        </div>    
+    
+        </header>
+
+<section class="hero">
+    <div class="Image-center">
+        <img class="heroimage" src="images\Profile Picture 2.jpg"width="200px" height="200px" id="ProfilePicture2">
+    </div>
+</section> 
+        <div class="text">
             <h2>Hi, I am Jackie.</h2>
             <h2>  A UI/UX designer</h2>
              <h2>based in </h2>
              <h2>Melbourne, Australia</h2>
-        </div> 
-    
+            </div>
+    </div> 
+   
 </body>
 
-    <section>
+    <footer>
     <div class="footer">
-    <ul class="footernav">
-    <li>Let's Work Together!</li>
+    <ul>
+    <li class="quote">Let's Work Together!</li>
     <li class="email-address">Jongsipaus@Gmail.Com</li>
-   <li> <img src="images\LinkedIn logo.png" width="200px" height="200px" class="linkedin"></li>
+   <li class="linkedin"><img src="images\LinkedIn logo.png" width="200px" height="200px" class="linkedin"></li>
     </ul>
     </div>
-    </section>
+    </footer>
 </html>
