--- a/index.html
+++ b/index.html
@@ -8,28 +8,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
 </head>
 
-<body> 
-        <header class="navigation">
-
-<div  class="inline-block-and-logo">
-    <div>      
-    <p class="name">Jacqueline Ongsip</p>
-    </div>  
-    <div class="rainbowimage">
-                    <a href="#"><img src="images\Rainbow.svg"width="24px" height="24px"></p>
-    </div>                     
-                    <div>
-                            <nav class="inline-block">
-                                    <ul>
-                    <li class="topnavli"><a class="active" href="#">Home</a></li>
-                    <li class="topnavli"><a href="#">Projects</a></li>
-                    <li class="topnavli"><a href="#">About</a></li>
-        </ul>
-        </nav>
-    </div>
-        </div>    
-    
-        </header>
+<body>
+    <div class="container">
+        <div class="navbar">
+            <p class="name">Jacqueline Ongsip</p>
+            <img class="rainbowlogo" src="images\Rainbow.svg" alt="rainbowlogo" width="30px" height="30px">
+                <nav>
+                    <ul>
+                        <li class="topnavright"><a href="#">Home</a></li>
+                        <li class="topnavright"><a href="#">Projects</a></li>
+                        <li id="active"><a href="#">About</a></li>
+                    </ul>
+                </nav>
+        </div>
 
 <section class="hero">
     <div class="Image-center">
@@ -44,15 +35,23 @@
             </div>
     </div> 
    
-</body>
 
-    <footer>
-    <div class="footer">
-    <ul>
-    <li class="quote">Let's Work Together!</li>
-    <li class="email-address">Jongsipaus@Gmail.Com</li>
-   <li class="linkedin"><img src="images\LinkedIn logo.png" width="200px" height="200px" class="linkedin"></li>
-    </ul>
-    </div>
-    </footer>
+
+</section>
+
+<section class="footer">
+
+<div class="portfoliofooter">
+    
+    <div class="footeritems">
+        <div class="quote">
+            <p class="footerquote">Let’s Work Together!</p>        
+            <p class="email">Jongsipaus@gmail.com</p>
+            <a href="https://www.linkedin.com/in/jacqueline-ongsip/"><img class="LinkedIn" src="images\LinkedIn logo .png" alt="Linkedinlogo"width="20px" height="24px"></a></li>        
+        </div>
+    </div>         
+</div>   
+</div>
+</section>
+</body>
 </html>
